--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/media/dog.svg">
     <title>Chúc Mừng 20/10</title>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Borel&display=swap");
